--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,8 @@ pybind11_add_module(model_bridge
     interface/model_bridge.cpp
     backend/cpp/src/llama_decode.cpp
     backend/cpp/src/llama_prefill.cpp
-    backend/cpp/src/inference.cpp)
+    backend/cpp/src/inference.cpp
+    backend/cpp/src/thread_pool.cpp)
 
 target_link_libraries(model_bridge PRIVATE ${TORCH_LIBRARIES})
 target_compile_options(model_bridge PRIVATE -mavx2 -mfma)
