提示词更改

--- a/backend/cpp/src/CUDAoperators/CMakeLists.txt
+++ b/backend/cpp/src/CUDAoperators/CMakeLists.txt
@@ -2,6 +2,8 @@
 file(GLOB_RECURSE OPERATOR_SOURCES "*.cu" "*.cpp")
 add_library(operators STATIC ${OPERATOR_SOURCES})
 target_include_directories(operators PUBLIC 
-    ${CMAKE_CURRENT_SOURCE_DIR} 
+    ${CMAKE_CURRENT_SOURCE_DIR}  
+    # ${CMAKE_SOURCE_DIR}/backend/cpp/include
+
 )
 
