--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ pybind11_add_module(model_bridge
     backend/cpp/src/llama_prefill.cpp
     backend/cpp/src/inference.cpp
     backend/cpp/src/thread_pool.cpp
-
+    backend/cpp/src/qwen.cpp
 )
 
 target_link_libraries(model_bridge PRIVATE ${TORCH_LIBRARIES} operators)
