--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,33 +1,25 @@
 cmake_minimum_required(VERSION 3.15)
 project(llm_infer LANGUAGES CXX CUDA)
+
+# --- 基本配置 ---
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CUDA_ARCHITECTURES 89)
 
-set(CMAKE_CXX_STANDARD 17)
+# --- 查找依赖 ---
+find_package(CUDAToolkit REQUIRED)
 set(PYBIND11_PYTHON_VERSION 3.10)
-# set(CMAKE_CXX_FLAGS_DEBUG "-g") # 为 Debug 构建类型添加 -g
-# set(CMAKE_BUILD_TYPE Debug) # 默认或显式设置为 Debug 类型以启用 -g
-# 设置 pybind11 的 cmake 配置路径
-# set(pybind11_DIR "/root/miniconda3/lib/python3.12/site-packages/pybind11/share/cmake/pybind11")
+# find_package(Python ${PYBIND11_PYTHON_VERSION} COMPONENTS Interpreter Development REQUIRED)
 find_package(pybind11 REQUIRED)
-
-# 设置 Torch 的 cmake 配置路径
-# set(Torch_DIR "/home/libtorch/libtorch/share/cmake/Torch")
 # find_package(Torch REQUIRED)
 
-
-# include_directories(backend/cpp/include)
-
-
-
+# --- 添加子目录和源文件 ---
 add_subdirectory(backend/cpp/src/CUDAoperators)
-# 自动收集 operators 文件夹下的所有源文件
-file(GLOB_RECURSE OPERATOR_SOURCES
-     "backend/cpp/src/CUDAoperators/*.cu"
-     "backend/cpp/src/CUDAoperators/*.cpp")
+# file(GLOB_RECURSE OPERATOR_SOURCES ...) # 如果需要
 
-pybind11_add_module(model_bridge 
+# --- 创建 Pybind11 模块 ---
+pybind11_add_module(model_bridge SHARED
     interface/model_bridge.cpp
-    ${OPERATOR_SOURCES} 
+    # ${OPERATOR_SOURCES}
     backend/cpp/src/llama_decode.cpp
     backend/cpp/src/llama_prefill.cpp
     backend/cpp/src/inference.cpp
@@ -35,36 +27,31 @@ pybind11_add_module(model_bridge
     backend/cpp/src/qwen.cpp
 )
 
-
-
-
-
-
+# --- 设置链接库 ---
 target_link_libraries(model_bridge PRIVATE operators)
-target_link_libraries(model_bridge PRIVATE -lcublas -lcudart)
+target_link_libraries(model_bridge PRIVATE CUDA::cublas CUDA::cudart)
+# target_link_libraries(model_bridge PRIVATE ${TORCH_LIBRARIES})
 
-
-# PUBLIC: 如果其他目标链接 model_bridge
-# INTERFACE: 只让链接 model_bridge 的目标看到
-# PRIVATE: 只有 model_bridge 自身编译时能看到
-
-# 对于头文件目录，通常用 PUBLIC 或 INTERFACE
+# --- 设置头文件包含路径 ---
 target_include_directories(model_bridge PUBLIC backend/cpp/include)
+# target_include_directories(model_bridge PRIVATE ${CUDAToolkit_INCLUDE_DIRS})
 
-target_include_directories(model_bridge PRIVATE /usr/local/cuda/include)
-
-# 如果 operators 库也需要这个目录
-# 在 backend/cpp/src/CUDAoperators/CMakeLists.txt 中添加:
-# target_include_directories(operators PUBLIC ../../include) # 相对于子目录的路径
-
-# 优化参数
-
-
+# --- 设置编译选项 (区分 Debug 和 Release, 修正 CUDA 选项传递) ---
 target_compile_options(model_bridge PRIVATE
-  $<$<COMPILE_LANGUAGE:CXX>:-O3 -march=native -funroll-loops -flto -mavx2 -mfma>
-  $<$<COMPILE_LANGUAGE:CUDA>:-O3 --use_fast_math --expt-relaxed-constexpr -lineinfo -gencode arch=compute_89,code=sm_89>
+    # --- C++ 编译器选项 ---
+# 在 target_compile_options 的 C++ 部分
+    $<$<CONFIG:Debug>:-g;-O0;-mavx2;-mfma> # <-- 添加 -mavx2 和 -mfma
+    $<$<CONFIG:Release>:-O3;-march=native;-funroll-loops;-flto;-mavx2;-mfma;-DNDEBUG>
+    # --- CUDA 编译器选项 (nvcc) ---
+    # 使用 $<COMPILE_LANGUAGE:CUDA> 来确保这些选项只给 nvcc
+    $<$<AND:$<CONFIG:Debug>,$<COMPILE_LANGUAGE:CUDA>>:-G;-O0>   # Debug: -G 和 -O0 只给 CUDA
+    $<$<AND:$<CONFIG:Release>,$<COMPILE_LANGUAGE:CUDA>>:-O3;--use_fast_math;-DNDEBUG> # Release: 优化选项只给 CUDA
+    # 通用 CUDA 配置 (只给 CUDA)
+    $<$<COMPILE_LANGUAGE:CUDA>:--expt-relaxed-constexpr;-gencode;arch=compute_89,code=sm_89>
 )
 
-
-# 启用 CUDA 分离式编译
+# --- 设置 CUDA 特定属性 ---
 set_target_properties(model_bridge PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+
+# --- (可选) 安装规则 ---
+# install(TARGETS model_bridge DESTINATION your_install_path)
