--- a/backend/cpp/src/operators/CMakeLists.txt
+++ b/backend/cpp/src/operators/CMakeLists.txt
@@ -1,11 +1,15 @@
 # 设置最低CMake版本
 cmake_minimum_required(VERSION 3.10)
 
-# 设置CUDA架构
-set(CMAKE_CUDA_ARCHITECTURES 70 75 80 86 89 90)
+# 设置CUDA架构 - 只保留需要的架构以减少编译时间
+set(CMAKE_CUDA_ARCHITECTURES 89)
 
 # 添加CUDA编译选项
 set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -std=c++17")
+
+# 为Debug模式添加优化选项，减少NCU请求数量
+set(CMAKE_CUDA_FLAGS_DEBUG "-lineinfo -O2 --generate-line-info --resource-usage --display-error-number --threads 0 --maxrregcount=64")
+set(CMAKE_CXX_FLAGS_DEBUG "-g1 -O2 -mavx2 -mfma")
 
 # 添加CPU算子源文件
 file(GLOB CPU_OPERATOR_SOURCES "cpu/*.cpp")
@@ -39,4 +43,19 @@ set_target_properties(unified_operators PROPERTIES
     CUDA_STANDARD 17
     CUDA_STANDARD_REQUIRED ON
     POSITION_INDEPENDENT_CODE ON
+    CUDA_SEPARABLE_COMPILATION ON
+)
+
+# 添加编译选项
+target_compile_options(unified_operators PRIVATE
+    # C++ 编译器选项
+    $<$<CONFIG:Debug>:-g1;-O2;-mavx2;-mfma>
+    $<$<CONFIG:Release>:-O3;-march=native;-funroll-loops;-mavx2;-mfma;-DNDEBUG>
+
+    # CUDA 编译器选项
+    $<$<AND:$<CONFIG:Debug>,$<COMPILE_LANGUAGE:CUDA>>:-lineinfo;-O2;--generate-line-info;--resource-usage;--display-error-number>
+    $<$<AND:$<CONFIG:Release>,$<COMPILE_LANGUAGE:CUDA>>:-O3;--use_fast_math;-DNDEBUG>
+
+    # 通用 CUDA 配置
+    $<$<COMPILE_LANGUAGE:CUDA>:--expt-relaxed-constexpr;-gencode;arch=compute_89,code=sm_89;--threads;0;--maxrregcount=64>
 )
