--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,4 @@ logits_data/visualizations/token_pos_55_comparison.png
 logits_data/draft/logits_57.bin
 logits_data/target/logits_57.bin
 logits_data/visualizations/token_pos_56_comparison.png
+frontend/QwenTest.py
